# dreamatlas

./: .gitignore  README.md  pyproject.toml  run.py
DreamAtlas/: __main__.py
DreamAtlas/GUI/: loading.py  main_interface.py  ui_data.py  widgets.py
DreamAtlas/classes/: class_map.py  graph.py
DreamAtlas/generators/: DreamAtlas_map_generator.py
examples/: script.py
