[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="DreamAtlas"
version="1.2.2"
authors=[ { name="Tlaloc" } ]
license={ file = "LICENSE" }

dependencies = [
  "contourpy>=1.3.3",
  "cycler>=0.12.1",
  "dimod>=0.12.21",
  "dwave_networkx>=0.8.18",
  "fasteners>=0.20",
  "fonttools>=4.63.0",
  "homebase>=1.0.1",
  "kiwisolver>=1.5.0",
  "llvmlite>=0.47.0",
  "matplotlib>=3.10.9",
  "minorminer>=0.2.21",
  "networkx>=3.6.1",
  "noise>=1.2.2",
  "numba>=0.65.1",
  "numpy>=2.4.6",
  "packaging>=26.2",
  "pillow>=12.2.0",
  "pyparsing>=3.3.2",
  "python-dateutil>=2.9.0.post0",
  "scipy>=1.17.1",
  "six>=1.17.0",
  "ttkbootstrap>=1.20.3"
]

[tool.setuptools.packages.find]
include = ["DreamAtlas*"]

[tool.setuptools.package-data]
"DreamAtlas" = ["databases/*", "databases/ui_images/*"]

[project.scripts]
dreamatlas = "DreamAtlas.GUI:run_interface"
